# DeepTutor

./: .env.example  .env.example_CN  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.py
.github/workflows/: docker-publish.yml  linting.yaml  sync-branch.yml  tests.yml
assets/README/: README_AR.md  README_CN.md  README_ES.md  README_FR.md  README_HI.md  README_JA.md  README_PT.md  README_RU.md
assets/releases/: ver0-3-0.md  ver0-4-0.md  ver0-4-1.md
config/: README.md  main.yaml
docs/: index.md  roadmap.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/features/: overview.md
docs/guide/: configuration.md  getting-started.md  troubleshooting.md
docs/zh/: index.md  roadmap.md
docs/zh/features/: overview.md
docs/zh/guide/: configuration.md  getting-started.md  troubleshooting.md
scripts/: start.py  start_web.py
src/agents/: __init__.py  base_agent.py
src/agents/chat/: README.md  __init__.py  chat_agent.py  session_manager.py
src/agents/co_writer/: README.md  base_agent.py  edit_agent.py  narrator_agent.py
src/agents/guide/: README.md  guide_manager.py
src/agents/guide/agents/: base_guide_agent.py  chat_agent.py  interactive_agent.py  locate_agent.py  summary_agent.py
src/agents/ideagen/: README.md  idea_generation_workflow.py  material_organizer_agent.py
src/agents/question/: README.md  coordinator.py  example.py  validation_workflow.py
src/agents/question/agents/: base_agent.py  generation_agent.py  validation_agent.py
src/agents/question/tools/: exam_mimic.py  pdf_parser.py  question_extractor.py
src/agents/research/: data_structures.py  main.py  research_pipeline.py
src/agents/research/agents/: __init__.py  decompose_agent.py  manager_agent.py  note_agent.py  rephrase_agent.py  reporting_agent.py  research_agent.py
src/agents/research/utils/: __init__.py  citation_manager.py  token_tracker.py
src/agents/solve/: README.md  __init__.py  main_solver.py
src/agents/solve/analysis_loop/: investigate_agent.py  note_agent.py
src/agents/solve/solve_loop/: manager_agent.py  precision_answer_agent.py  response_agent.py  solve_agent.py  tool_agent.py
src/agents/solve/utils/: __init__.py  config_validator.py  display_manager.py  error_handler.py  json_utils.py  token_tracker.py
src/api/: README.md  main.py  run_server.py
src/api/routers/: chat.py  co_writer.py  embedding_provider.py  guide.py  ideagen.py  knowledge.py  llm_provider.py  question.py  research.py  settings.py  solve.py  system.py
src/api/utils/: history.py  log_interceptor.py
src/knowledge/: README.md  add_documents.py  config.py  example_add_documents.py  extract_numbered_items.py  initializer.py  manager.py  progress_tracker.py  raganything_loader.py  start_kb.py
src/logging/: __init__.py  config.py  logger.py
src/logging/adapters/: __init__.py  lightrag.py  llamaindex.py
src/logging/handlers/: console.py  file.py  websocket.py
src/logging/stats/: llm_stats.py
src/services/: __init__.py
src/services/config/: __init__.py  loader.py
src/services/embedding/: .env.example  __init__.py  client.py  config.py  provider.py  provider_config.py
src/services/embedding/adapters/: __init__.py  base.py  cohere.py  jina.py  ollama.py  openai_compatible.py
src/services/llm/: __init__.py  client.py  config.py  provider.py
src/services/prompt/: __init__.py  manager.py
src/services/rag/: __init__.py  factory.py  pipeline.py  service.py  types.py
src/services/rag/components/: __init__.py  base.py
src/services/rag/components/chunkers/: __init__.py  base.py  fixed.py  numbered_item.py  semantic.py
src/services/rag/components/embedders/: __init__.py  base.py  openai.py
src/services/rag/components/indexers/: __init__.py  base.py  graph.py  vector.py
src/services/rag/components/parsers/: __init__.py  base.py  markdown.py  pdf.py  text.py
src/services/rag/components/retrievers/: __init__.py  base.py  dense.py  hybrid.py
src/services/rag/pipelines/: __init__.py  academic.py  lightrag.py  llamaindex.py  raganything.py
src/services/setup/: __init__.py  init.py
src/services/tts/: __init__.py  config.py
src/tools/: __init__.py  code_executor.py  query_item_tool.py  rag_tool.py  tex_chunker.py  tex_downloader.py  web_search.py
src/utils/: config_manager.py
tests/core/: test_prompt_manager.py
web/app/: layout.tsx  page.tsx
web/app/co_writer/: page.tsx
web/app/guide/: page.tsx
web/app/history/: page.tsx
web/app/ideagen/: page.tsx
web/app/knowledge/: page.tsx
web/app/notebook/: page.tsx
web/app/question/: page.tsx
web/app/research/: page.tsx
web/app/settings/: page.tsx
web/app/solver/: page.tsx
web/components/: ActivityDetail.tsx  ChatSessionDetail.tsx  Sidebar.tsx
web/context/: GlobalContext.tsx
