# Python project configuration for DeepTutor
# This file configures Black, Ruff, and other Python tools

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tutor"
version = "0.1.0"
description = "An intelligent learning companion with multi-agent collaboration and RAG"
requires-python = ">=3.10, <3.14"
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
    "python-dotenv>=1.2.1,<2.0.0",
    "PyYAML>=6.0.3,<7.0.0",
    "tiktoken>=0.12.0,<1.0.0",
    "requests>=2.32.5,<3.0.0",
    "openai>=2.14.0,<3.0.0",
    "perplexityai>=0.22.2,<1.0.0",
    "dashscope>=1.25.5,<2.0.0",
    "aiohttp>=3.13.3,<4.0.0",
    "httpx>=0.28.1,<0.29.0",
    "urllib3>=2.6.2,<3.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn[standard]>=0.40.0,<0.41.0",
    "websockets>=15.0.1,<16.0.0",
    "python-multipart>=0.0.21,<0.0.22",
    "pydantic>=2.0.0,<2.12.4",
    "lightrag-hku>=1.4.9.10,<2.0.0",
    "arxiv>=2.4.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
]

[tool.poetry]
package-mode = false

# ============================================
# Black code formatter configuration
# ============================================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
  | node_modules
  | \.next
)/
'''

# ============================================
# Ruff linter and formatter configuration
# ============================================
[tool.ruff]
# Target Python version
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# 只启用最基础的规则（放宽要求）
select = [
    "E",   # pycodestyle errors (语法错误)
    "F",   # pyflakes (未使用的导入、变量等)
    "I",   # isort (import 排序)
    # 其他规则都忽略，不强制要求
]

# Ignore specific rules (放宽检查，只保留重要规则)
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "TRY003", # Avoid specifying long messages outside exception class
    "T201",  # print found (允许 print 语句，用于调试)
    "E722",  # Do not use bare except (某些情况下需要)
    "E402",  # Module level import not at top of file (某些情况下需要)
    "PLC0415", # import should be at top-level (某些情况下需要)
    "PTH123", # open() should be replaced by Path.open() (允许使用 open)
    "PTH103", # os.makedirs() should be replaced by Path.mkdir() (允许使用 os.makedirs)
    "PTH118", # os.path.join() should be replaced by Path (允许使用 os.path.join)
    "B904",  # Within except clause, raise exceptions with raise ... from err
    "EM101",  # Exception must not use a string literal
    "EM102",  # Exception must not use an f-string literal
    "TRY002", # Create your own exception
    "TRY300", # Consider moving this statement to an else block
    "DTZ005", # datetime.now() called without tz argument
    "RET504", # Unnecessary assignment before return
    "PLW2901", # for loop variable overwritten by assignment target
    "F841",  # Local variable assigned but never used
    "ERA001", # Found commented-out code (允许注释代码)
    "B006",  # Do not use mutable data structures for argument defaults
]

# Exclude patterns
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    ".next",
    "out",
    "venv",
    "__pycache__",
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending
line-ending = "auto"

# ============================================
# Ruff import sorting (isort replacement)
# ============================================
[tool.ruff.lint.isort]
known-first-party = ["src", "scripts"]
force-sort-within-sections = true
split-on-trailing-comma = true

# ============================================
# Ruff per-file-ignores
# ============================================
[tool.ruff.lint.per-file-ignores]
# Allow longer lines in test files
"**/test_*.py" = ["E501", "PLR2004"]
"**/__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# ============================================
# Ruff mccabe complexity
# ============================================
[tool.ruff.lint.mccabe]
max-complexity = 10
